# magnet

./: .gitignore  Cargo.toml  README.md
magnet_derive/: Cargo.toml
magnet_derive/src/: case.rs  codegen_enum.rs  codegen_field.rs  codegen_struct.rs  codegen_union.rs  error.rs  generics.rs  lib.rs  meta.rs  tag.rs
magnet_schema/: Cargo.toml
magnet_schema/src/: lib.rs  support.rs
magnet_schema/tests/: tests.rs
