[package]
name          = "magnet_derive"
version       = "0.2.0" # remember to update html_root_url in lib.rs and magnet_schema/src/lib.rs
authors       = ["Árpád Goretity <h2co3@h2co3.org>"]
repository    = "https://github.com/H2CO3/magnet.git"
homepage      = "https://h2co3.github.io/magnet/"
license       = "MIT"
readme        = "../README.md"
documentation = "https://docs.rs/magnet_derive"
description   = "Magnet, a JSON/BSON schema generator"
keywords      = ["database", "mongodb", "json", "derive", "macro"]
categories    = ["database", "database-implementations", "development-tools", "api-bindings", "web-programming"]

[lib]
proc-macro = true

[dependencies]
syn = "0.13.1"
quote = "0.5.1"
