[package]
name          = "magnet_derive"
version       = "0.3.3" # remember to update html_root_url in lib.rs and magnet_schema/src/lib.rs
authors       = ["Árpád Goretity <h2co3@h2co3.org>"]
repository    = "https://github.com/H2CO3/magnet.git"
homepage      = "https://h2co3.github.io/magnet/"
license       = "MIT"
readme        = "../README.md"
documentation = "https://docs.rs/magnet_derive"
description   = "Magnet, a JSON/BSON schema generator"
keywords      = ["database", "mongodb", "json", "derive", "macro"]
categories    = ["database", "database-implementations", "development-tools", "api-bindings", "web-programming"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.9"
syn         = "0.14.7"
quote       = "0.6.5"
